# DS_hw_01

./: dz_1.ipynb  pyproject.toml
